-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
lqe_glbl_data should be protected with lqe_glbl_data_lock in qmt_site_reaclc_sb like it did in other places to avoid crashing:
Lustre: DEBUG MARKER: lctl pool_remove lustre.qpool1 lustre-OST0005_UUID Lustre: DEBUG MARKER: lctl pool_remove lustre.qpool1 lustre-OST0006_UUID BUG: unable to handle kernel NULL pointer dereference at 00000000000000d8 IP: [<ffffffffc10c81d8>] qmt_site_recalc_cb+0x318/0x7e0 [lquota] Oops: 0000 [#1] SMP CPU: 1 PID: 26035 Comm: qsd_reint_qpool Kdump: loaded 3.10.0-1160.53.1.el7.x86_64 #1 Call Trace: [<ffffffffc09ab7ae>] cfs_hash_for_each_tight+0x11e/0x320 [libcfs] [<ffffffffc09aba20>] cfs_hash_for_each+0x10/0x20 [libcfs] [<ffffffffc10c9df4>] qmt_pool_recalc+0xa64/0x11f0 [lquota] [<ffffffffad4c5e61>] kthread+0xd1/0xe0
- is related to
-
LU-14434 parallel-scale-nfsv4 test compilebench crashes in qmt_id_lock_cb
-
- Resolved
-
-
LU-16341 unable to handle kernel NULL in qmt_site_recalc_cb
-
- Resolved
-
- is related to
-
LU-15021 sanity-quota test_55: crash in qmt_seed_glbe_all()
-
- Resolved
-
-
LU-16725 crash at qmt_free_lqe_gd+0xa/0x1f0
-
- Resolved
-
(4 mentioned in)